finishes structural barriers and planning for justice sections

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -21237,3 +21237,17 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	doi = {10.2172/1219218},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/DHHU2MT6/USDOE Office of Energy Efficiency and Renewable Energy (EERE), Renewable Power Office. Wind Energy Technologies Office et al. - 2011 - Renewable Energy Cost Modeling A Toolkit for Establishing Cost-Based Inc.pdf:application/pdf},
 }
+
+@report{office_of_retail_market_development_2025_2025,
+	location = {Chicago, {IL}, United States},
+	title = {2025 Annual Report},
+	url = {https://www.ilga.gov/Documents/Reports/ReportsSubmitted/6066RSGAEmail13370RSGAAttachORMD%20Section%2020-110%20Report%202025.pdf},
+	pages = {36},
+	number = {837},
+	institution = {Illinois Commerce Commission},
+	author = {{Office of Retail Market Development}},
+	urldate = {2025-08-10},
+	date = {2025-07},
+	langid = {english},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/MJBPTSF6/LaSalle - 2023 - ILLINOIS COMMERCE COMMISSION.pdf:application/pdf},
+}
