--- a/docs/7-interviews/72-literature.tex
+++ b/docs/7-interviews/72-literature.tex
@@ -71,24 +71,17 @@ for energy justice.
 The authors argue that these six principles should be used together when
 crafting just energy policy.
 
-\subsection{Modeling for justice}
+% \subsection{Modeling for justice}
 
-Discuss the paper \cite{lonergan_energy_2023}
+% Discuss the paper \cite{lonergan_energy_2023}
 
-\subsection{Novelty of this work}
+% \subsection{Novelty of this work}
 
-\textcolor{red}{What are some of the novelties of the present study}
-\begin{enumerate}
-    \item Considers structural barriers to energy modeling.
-    \item Investigates the role concepts of energy justice do (or do not) play
-    in energy policy for some places in Illinois.
-    \item Evaluates a specific energy modeling tool and features of that tool.
-\end{enumerate}
- 
-% This section answers the following questions \begin{enumerate} \item Where do
-% consumers get their energy from? For example, the open energy market, their
-% municipality, municipal electric aggregation, or some default supply decided
-% by the state of Illinois. \item How do suppliers of electricity, decide what
-% types of generators in which to invest? For example, the \ac{imea} procures
-% electricity on behalf of their member communities from the open market, and
-% also owns part of the Prairie coal plant. \end{enumerate}
+% \textcolor{red}{What are some of the novelties of the present study}
+% \begin{enumerate}
+%     \item Considers structural barriers to energy modeling.
+%     \item Investigates the role concepts of energy justice do (or do not) play
+%     in energy policy for some places in Illinois.
+%     \item Evaluates a specific energy modeling tool and features of that tool.
+% \end{enumerate}
+
