--- a/docs/7-interviews/76-results.tex
+++ b/docs/7-interviews/76-results.tex
@@ -127,26 +127,69 @@ deploy strategies that advance equity and justice in their communities.
 \subsection{Planning for justice}
 \label{section:muni-justice}
 
-Although most of the case regions do not have an explicit definition of
-``justice'' all of them acknowledge disproportionality and 
+This section discusses the ways municipalities in Illinois, and the state
+government, conceptualize justice or equity and incorporate it into their
+decision making processes.
 
-At both the state and municipal levels, energy justice considerations are driven
-primarily by advocacy groups, such as \ac{cub} and \ac{nest}, lobbying for its
-inclusion in policy. 
+% justice definitions
+First, municipalities prefer the term ``equity'' to ``justice'' which is
+consistent with the findings of Diezmart\'inez et al
+\cite{diezmartinez_us_2022}. Second, most municipalities do not have formal
+definitions of equity but of them acknowledge disproportionality and
+marginalization. ``The equity angle of it is we don't want historically
+disenfranchised populations or really any segment of the population to be left
+behind we need everyone involved in the clean energy transition (Interviewee
+UP1).'' However, the text of each municipality's climate action plan focuses
+primarily on equitable distribution of benefits, which also corroborates the
+findings from Diezmart\'inez et al \cite{diezmartinez_us_2022}. Three
+municipalities (Champaign, Urbana, and Naperville) have an office or department
+dedicated to equity issues. But these equity-focused departments are distinct
+from planning departments which suggests there could be more work integrating
+justice initiatives into planning processes.
 
-[... include quotes here ]
+% procedural justice
+Although interviewees identified disproportionality as an issue, mechanisms for
+active participation from, and engagement with, marginalized communities were
+understated. As discussed in the previous section, residents' voices may be
+heard by voting for council members and the mayor. While the level of community
+engagement depends on the willingness for city councils to spend money on
+process. Since Naperville's energy supply decisions are made by \ac{imea},
+\ac{imea} should be responsible for public engagement, however their processes
+lack transparency and public involvement seems to be discouraged.
+\begin{quote}
+    [T]he planning is really done behind closed doors by some of the
+    experts at the IMEA. And when they think they have something that they want
+    to propose to the board of directors, they start first with the executive
+    board. Those folks have already been kind of pre-sold about the next
+    proposal, and then that gets approved at the board of directors meetings.
+    [...]Any communications about the planning is done as a one-way street. 
+    [...]They're kind of a captured vote. It's
+    rare. I think in the eight years while one of our guys has participated
+    remotely or in person on attending every single IMEA meeting, I think he can
+    remember only one time where a single member voted no. The votes are always
+    either yes entirely or yes with some abstentions. So the planning is done
+    behind closed doors. The results of the planning is offered as a slide
+    presentation to members and then they're expected to vote after seeing the
+    slides. That vote commits the entire membership to whatever they decide that
+    they're going to do. And then the individual members go back to their
+    communities. And within a week or so, they let us know what they've done.
+   [\dots]But we would say the transparency, the
+    planning that they do is non-transparent. The IMEA's position is it's 100\%
+    transparent because the board members get to see the charts and they get to
+    vote. But there's a big difference between having members, rate payers being
+    involved in the process or not. There's a big difference between being able
+    to look at all the numbers or just the numbers and charts, actually just the
+    charts that the IMEA is willing to share with us. And those board meetings,
+    to the best of our knowledge, are not recorded. So unless you're able to
+    dedicate the time to sit on the Zoom and listen to the board meeting, you
+    have no way of availing yourself to any planning information. The IMEA has
+    refused to make these board meetings. If they recorded them, we're not aware
+    that the recordings exist (Interviewee NA1).
+\end{quote}
 
-Although several practitioners expressed interest in energy justice and related
-concepts, institutions such as the \ac{ipa} and municipal governments have
-specific staff dedicated to equity and justice. \textcolor{red}{[... share
-examples and quotes here ...]}. 
-
-[... How do the interviewees feel about this separation and/or energy justice in
-general? ]
-
-Despite tension, advocacy groups in Illinois gained some significant ground with
-\ac{ceja}'s passage in 2021. In the words of interviewee IA2:
-
+% state level
+At the state level, Illinois has a clearer focus on equity and justice issues
+after the passage of \ac{ceja}. In the words of interviewee IA2:
 \begin{quote}
     We have to incorporate into law, not just affordability, but environmental
     justice, utility justice, utility democracy, all of these other concepts.
@@ -154,22 +197,22 @@ Despite tension, advocacy groups in Illinois gained some significant ground with
     Definitely not. But it did introduce these concepts into Illinois in, I
     think, a pretty significant way.
 \end{quote}
+In particular, Illinois clearly defined ``equity-eligible persons'' based on a
+person's residence in specific census tracts. Two of the interviewees (IP1, IP3)
+commented on the importance of including frontline communities when developing
+climate policy. The \ac{pcap} also describes continued efforts to engage these
+communities. However, the energy modeling prescribed in the \ac{pcap} does not
+include avenues for active participation from constituents outside of the normal
+public comment period. Modeling efforts are typically outsourced to consulting
+firms and these projects do not involve members of the public.
 
-Other items to discuss
-\begin{enumerate}
-    \item What does community engagement look like?
-    \item Who is recognized as a stakeholder?
-    \item Is there an apparent tension between justice and effective outcomes?
-    (two examples: local food vs equity requirement and the idea that someone
-    will be unhappy with the outcome and thus blame the process...)
-\end{enumerate}
 
-\textcolor{red}{Note for later: One of the key patterns I found in the
-interviews was that, although many interviewees were empathetic to
-justice-related efforts and initiatives, those initiatives were delegated to a
-dedicated person or department within governing institutions. This suggests
-there is more work to be done integrating energy justice and energy
-modeling/policy-making}
+% \textcolor{red}{Note for later: One of the key patterns I found in the
+% interviews was that, although many interviewees were empathetic to
+% justice-related efforts and initiatives, those initiatives were delegated to a
+% dedicated person or department within governing institutions. This suggests
+% there is more work to be done integrating energy justice and energy
+% modeling/policy-making}
 
 \subsection{Energy model usage}
 \label{section:muni-model-usage}
@@ -250,10 +293,6 @@ municipalities needed betters tools to develop energy visions for their
 communities, and that municipal governments would be the ones employing
 \acp{esom}. Now, it appears these assumptions do not fully hold.
 
-The first barrier comes from the structure of energy markets (\textcolor{red}{is
-``first'' correct, here? I think all of them are related to energy markets in
-some form\dots}). 
-
 As shown in Figure \ref{fig:illinois-flow-chart}, consumers and municipalities
 cannot directly participate electricity markets. Instead, there are myriad
 entities that broker electricity purchases and thus these entities control most
@@ -269,10 +308,11 @@ generation, or do not want to own their own generation because it is ``expensive
 and complicated (Interviewee IA2).''
 
 Let us consider the first scenario where a municipality is served by one of the
-two major \acp{iou} in Illinois: Ameren and ComEd. There are three structural
-barriers to making energy supply choices: Access to data about residents' energy
-usage in a municipality, inadequate grid infrastructure to support \ac{btm}
-resources, and \acf{mca}.
+two major \acp{iou} in Illinois: Ameren and ComEd. In the present case study,
+the cities of Champaign and Urbana fall under this category. There are three
+structural barriers to making energy supply choices: Access to data about
+residents' energy usage in a municipality, inadequate grid infrastructure to
+support \ac{btm} resources, and \acf{mca}.
 
 The first barrier is quite simple. Since municipalities do not control the
 delivery of electricity to their residents, they do not have access to the their
@@ -293,31 +333,85 @@ generate profit. Interviewee IP2 put it simply
      (Interviewee IP2).
 \end{quote}
 Since \acfp{iou} are regulated by the \ac{icc} they cannot profit from the
-delivery of electricity, depsite having monopoly control over electricity and
+delivery of electricity, depsite having monopoly control over electricity
 distribution. However, \acp{iou} are allowed to recover their expenses.
-Therefore, \acp{iou} can generate profit when they build new infrastructure.
-This makes it difficult for municipalities that would like to encourage
-residents to install \ac{btm} solar to do so. ``[\acp{iou} are] reluctant to want to enable
-the use of [\ac{btm}] stuff like that because it means less investment they have
-to make (Interviewee IP2).''
+Therefore, \acp{iou} can generate profit when they build new infrastructure by
+passing along those costs to ratepayers. This makes it difficult for
+municipalities that would like to encourage residents to install \ac{btm} solar
+to do so. ``[\acp{iou} are] reluctant to want to enable the use of [\ac{btm}]
+stuff like that because it means less investment they have to make (Interviewee
+IP2)'' and therefore less profit for the utility.
 
 % challenges with MCA
-Municipalities can improve their bargaining position by aggregating their
-constituents' electricity demand and negotiating on behalf of the entire
-community in a process called \ac{mca}. Although \ac{mca} allows communities to
-(sometimes) negotiate a better electricity price and (sometimes) benefit from
-cleaner electricity with \ac{rec} purchases, energy supply choices are still
-limited to those \ac{ares} that submit a bid to supply electricity (or taking
-the default supply). Further, \acp{rec} generated through \ac{mca} do not have
-\textit{additionality} \cite{illinois_power_agency_municipal_2023}. That is, 
+The third barrier relates to energy supply choices in a deregulated electricity
+market. Since \acp{iou} do not profit from the supply or delivery of
+electricity, these utilities do not have any interest nor control in energy
+supply decisions. Indeed, since Illinois has a deregulated electricity market,
+consumers are theoretically able to receive electricity from any supplier they
+prefer if they are unsatisfied with the default supply procured by the \ac{ipa}.
+Despite this freedom to choose, consumers that contracted with \ac{ares} during
+the 2024-2025 Illinois congressional session paid on average 2.5 cents more per
+kilowatt-hour in the ComED region and 1.6 cents more in the Ameren region
+compared with consumers receiving the default supply
+\cite{office_of_retail_market_development_2025_2025}. Figure \ref{fig:ares-ptc}
+shows the difference in cost between \ac{ares} and the default supply \ac{ptc}
+for each utility region in Illinois over the last six years. Values greater than
+zero indicate years when the cost of electricity from \ac{ares} exceeded the
+cost of the default supply.
 
+\begin{figure}[ht!]
+    \centering
+    \resizebox{0.9\columnwidth}{!}{\input{figures/07_interview_chapter/ptc_plot.pgf}}
+    \caption{The average difference in cost between the \ac{ares} and the
+    \ac{ptc} from the default supply.}
+    \label{fig:ares-ptc}
+\end{figure}
 
-In the second scenario, where a municipality does have its own electric
-utility...
-\begin{enumerate}
-    \item Engaged in contracts that delay or prohibit investment in certain
-    \ac{btm} resources.
-\end{enumerate}
+Consumers and municipalities can improve their bargaining position by
+aggregating their constituents' electricity demand and negotiating on behalf of
+the entire community in a process called \acf{mca}. Although \ac{mca} allows
+communities to (sometimes) negotiate a better electricity price and (sometimes)
+benefit from cleaner electricity with \ac{rec} purchases, energy supply choices
+are still limited to those \ac{ares} that submit a bid to supply electricity (or
+taking the default supply). Further, \acp{rec} generated through \ac{mca} do not
+have \textit{additionality} \cite{illinois_power_agency_municipal_2023}. That
+is, even when paying a premium for \acp{rec}, these \acp{rec} do not lead to new
+renewable energy capacity. Interviewee IP3 describes this issue
+\begin{quote}
+     The challenge is, would [\ac{mca}] facilitate the development of new
+     generation such that you could point to it as being additive or is it just
+     a means for picking up environmental attributes from projects that are
+     already built [and] not really as consequential to the public policy aims
+     of why you're doing it in the first place. [\dots] The reality is that none
+     of those purchases were making a new project come into the market that
+     wouldn't exist otherwise (Interviewee IP3).
+\end{quote}
+
+So, for municipalities that do not have access to energy demand data, do not
+control the condition of electric distribution infrastructure, and for whom
+electric supply choices are not guaranteed to drive the development of new clean
+energy projects, it is understandable that city planners do not use \acp{esom}
+nor do they find the results from these tools particularly salient. 
+
+Now, let us turn to the second scenario, where a municipality does have its own
+electric utility. \ac{uiuc} and Naperville fall under this category. These
+municipalities could exercise much more agency over energy supply decisions.
+Especially \ac{uiuc} since it owns the majority of its own generating resources.
+In addition, municipally-owned utilities are exempt from the Public Utilities
+Act and therefore not regulated by the \ac{icc}. In theory, such municipalities
+control 100\% of the energy supply decisions for their residents. However, in
+the case of Naperville, its city council contracted with \ac{imea} to plan and
+procure its energy supply. This is appealing because it does not require
+Naperville to hire staff to manage energy supply, it allows \ac{imea}'s members
+to pool their resources, and \ac{imea} provides additional administrative
+services. However, \ac{imea} members are contractually obligated to receive
+100\% of their electricity which means these municipalities have zero control in
+their energy supply. This obligation either delays or prohibits investment in
+certain \ac{btm} resources. ``Now they're legally bound to agree to everything
+that was in that contract. So if in that contract it says that, well, you can't
+install batteries behind the meter (Interviewee IA2).'' Naturally,
+municipalities that are contractually prohibited from making energy supply
+decisions will not benefit from energy modeling.
 
 \subsection{Assessing \ac{osier}}
 \label{section:assess-osier} 
@@ -406,5 +500,5 @@ Finally, interviewees identified some features that would be valuable for an
 measures, such as improvements to building heating envelopes or switching to LED
 lights, was the most frequently mentioned feature. Electric vehicle charging and
 distributed energy resources were the second most requested feature.
-Interviewees also expressed interest policy levers such as time of use rates for
-electricity or net energy metering.
+Interviewees also expressed interest in represeting policy levers such as time
+of use rates for electricity or net energy metering.
