--- a/docs/7-interviews/77-discussion.tex
+++ b/docs/7-interviews/77-discussion.tex
@@ -2,6 +2,8 @@
 
 Some ideas to consider ...
 
+\subsection{Who can benefit from energy modeling?}
+
 \begin{enumerate}
     \item There is a growing body of literature which recognizes that, despite
     the important role for municipalities in the energy transition, municipal
@@ -15,6 +17,8 @@ Some ideas to consider ...
 
 Maybe discuss some of the benefits and limitations of \ac{osier} ...
 
+
+\subsection{How \ac{osier} addresses the ``human dimension''}
 Benefits include
 \begin{enumerate}
     \item \ac{osier} allows for any number of constraints, objectives, and even
@@ -35,3 +39,5 @@ Benefits include
     comments before being finalized, these two activies are distinct. Illinois has an opportunity to 
     employ participatory modeling to develop robust visions for its energy future.
 \end{enumerate}
+
+\subsection{Policy implications}
