--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -115,5 +115,6 @@
 \acro{crest}[CREST]{Cost of Renewable Energy Spreadsheet Tool}
 \acro{iclei}[ICLEI]{International Council for Local Environmental Initiatives}
 \acro{irp}[IRP]{integrated resource plan}
+\acro{ptc}[PTC]{price-to-compare}
 
 
