finishes discussion section

--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -17662,6 +17662,19 @@ one in the original language if this is not English Discussions are in English (
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GHMF3GAV/9780470552940.html:text/html},
 }
 
+@report{less_cost_2021,
+	title = {The Cost of Decarbonization and Energy Upgrade Retrofits for {US} Homes},
+	url = {https://www.osti.gov/servlets/purl/1834578/},
+	pages = {None, 1834578, ark:/13030/qt0818n68p},
+	number = {None, 1834578, ark:/13030/qt0818n68p},
+	author = {Less, Brennan and Walker, Iain and Casquero-Modrego, Núria and Rainer, Leo},
+	urldate = {2024-10-28},
+	date = {2021-08-01},
+	langid = {english},
+	doi = {10.2172/1834578},
+	file = {Less et al. - 2021 - The Cost of Decarbonization and Energy Upgrade Ret.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/FMXUZ4S8/Less et al. - 2021 - The Cost of Decarbonization and Energy Upgrade Ret.pdf:application/pdf},
+}
+
 @article{sinha_diverse_2024,
 	title = {Diverse decarbonization pathways under near cost-optimal futures},
 	volume = {15},
@@ -21250,4 +21263,18 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	date = {2025-07},
 	langid = {english},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/MJBPTSF6/LaSalle - 2023 - ILLINOIS COMMERCE COMMISSION.pdf:application/pdf},
+}
+
+@report{wilson_end-use_2022,
+	title = {End-Use Load Profiles for the U.S. Building Stock: Methodology and Results of Model Calibration, Validation, and Uncertainty Quantification},
+	url = {https://www.osti.gov/servlets/purl/1854582/},
+	shorttitle = {End-Use Load Profiles for the U.S. Building Stock},
+	pages = {NREL/TP--5500--80889, 1854582, MainId:78667},
+	number = {{NREL}/{TP}-5500-80889, 1854582, {MainId}:78667},
+	author = {Wilson, Eric and Parker, Andrew and Fontanini, Anthony and Present, Elaina and Reyna, Janet and Adhikari, Rajendra and Bianchi, Carlo and {CaraDonna}, Christopher and Dahlhausen, Matthew and Kim, Janghyun and {LeBar}, Amy and Liu, Lixi and Praprost, Marlena and Zhang, Liang and {DeWitt}, Peter and Merket, Noel and Speake, Andrew and Hong, Tianzhen and Li, Han and Frick, Natalie and Wang, Zhe and Blair, Aileen and Horsey, Henry and Roberts, David and Trenbath, Kim and Adekanye, Oluwatobi and Bonnema, Eric and El Kontar, Rawad and Gonzalez, Jonathan and Horowitz, Scott and Jones, Dalton and Muehleisen, Ralph and Platthotam, Siby and Reynolds, Matthew and Robertson, Joseph and Sayers, Kevin and Li, Qu},
+	urldate = {2024-03-22},
+	date = {2022-03-07},
+	langid = {english},
+	doi = {10.2172/1854582},
+	file = {Wilson et al. - 2022 - End-Use Load Profiles for the U.S. Building Stock.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2QPHHWJF/Wilson et al. - 2022 - End-Use Load Profiles for the U.S. Building Stock.pdf:application/pdf},
 }
