--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -116,5 +116,6 @@
 \acro{iclei}[ICLEI]{International Council for Local Environmental Initiatives}
 \acro{irp}[IRP]{integrated resource plan}
 \acro{ptc}[PTC]{price-to-compare}
+\acro{abm}[ABM]{agent-based model}
 
 
