first full draft of interview chapter

--- a/docs/7-interviews/71-introduction.tex
+++ b/docs/7-interviews/71-introduction.tex
@@ -28,6 +28,6 @@ The next section reviews the existing literature on decentralized energy
 planning. Section \ref{section:interview-methods} describes the method for
 collecting and analyzing interview data using thematic analysis. Section
 \ref{section:cases} introduces the different case regions considered in this
-chapter.
-
-\textcolor{black}{Lastly, an analysis and discussion of the interviews.}
+chapter. Section \ref{section:interview-results} presents the results from the
+interviews. Lastly, Section \ref{section:interview-discussion} discusses the 
+implications for policy and model development.
