--- a/docs/7-interviews/76-results.tex
+++ b/docs/7-interviews/76-results.tex
@@ -1,4 +1,5 @@
 \section{Results}
+\label{section:interview-results}
 This section explores the results from the analysis of thirteen interviews. It
 is organized according to the five themes derived from thematic analysis. Table
 \ref{tab:themes} summarizes the themes and their sub-categories presented in
