--- a/docs/7-interviews/77-discussion.tex
+++ b/docs/7-interviews/77-discussion.tex
@@ -1,4 +1,5 @@
 \section{Discussion}
+\label{section:interview-discussion}
 This section synthesizes the interview results into recommendations that can be
 applied in other contexts.
 
