--- a/docs/7-interviews/72-literature.tex
+++ b/docs/7-interviews/72-literature.tex
@@ -35,7 +35,7 @@ modeling results into decision making processes.
 There is, to date, limited empirical work that investigates the inclusion of
 justice into formal planning proceses at either state or municipal levels. One
 study by Diezmart\'inez et al. looked at 58 climate action plans sampled from
-the 100 largets U.S. cities \cite{diezmartinez_us_2022}. This study found that,
+the 100 largest U.S. cities \cite{diezmartinez_us_2022}. This study found that,
 of the 58 climate action plans, roughly two-thirds of them attend to either
 justice or equity, while the final third do not discuss either concept. The
 researchers also found that recency, high levels of inequality within a city,
